--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>AngelliCode - Angellica's Programming Portfolio</title>
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages. Ta Da! :)</p>
+
 </body>
 </html>
