--- a/works.html
+++ b/works.html
@@ -8,7 +8,7 @@
 
 <div class="bgGreen">
 	<h1 id="logo" style="float:left; position: relative;z-index: 1; font-size:90px;"></h1>
-	<img class="cur" src="C:/Users/School234/Documents/GitHub/angellicode.github.io/imgs/cursor_small.png"/>
+	<img class="cur" src="C:/Users/School234/Documents/GitHub/angellicode.github.io/cursor_small.png"/>
 </div>
 
 <div class="portfolioOne" onClick="viewPeiceOne()">
