--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 <head>
 	<title>AngelliCode - Angellica Brown's Portfolio</title>
 	<link rel="stylesheet" href="about_style.css"/>
-	<link rel="icon" href="C:/Users/School234/Documents/GitHub/angellicode.github.io/favicon.png">
+	<link rel="icon" href="favicon.png">
 </head>
 <body>
 
 <div class="bgGreen">
 	<h1 id="logo" style="float:left; position: relative;z-index: 1; font-size:90px;"></h1>
-	<img class="cur" src="C:/Users/School234/Documents/GitHub/angellicode.github.io/cursor_small.png"/>
+	<img class="cur" src="cursor_small.png"/>
 </div>
 
 <div class="aboutBox">
