--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>AngelliCode - Angellica Brown's Portfolio</title>
 	<link rel="stylesheet" href="style.css"/>
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="/favicon.png">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 <div class="bgGreen">
 <div class="titleScreen">
 	<h1 id="logo" style="float:left; position: relative;z-index: 1; font-size:102px;"></h1>
-	<img class="cur" src="cursor.png"/>
+	<img class="cur" src="/cursor.png"/>
 </div>
 <h2 id="logodesc" style="top:70%;position:absolute;font-size:25px;"></h2>
 </div>
