--- a/works.html
+++ b/works.html
@@ -13,7 +13,7 @@
 
 <div class="portfolioOne" onClick="viewPeiceOne()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice One:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Mobile Application</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Small Web Game</h3>
 </div>
 
 <div class="portfolioTwo" onClick="viewPeiceTwo()">
@@ -37,6 +37,10 @@ window.typeWords();
 <script>
 function viewPeiceTwo(){
 	location.replace("C:/Users/School234/Documents/GitHub/angellicode.github.io/portfolio1/index.html");
+}
+
+function viewPeiceOne(){
+	location.replace("/main_menu_blocky.html");
 }
 </script>
 
