--- a/main_menu_blocky.html
+++ b/main_menu_blocky.html
@@ -8,7 +8,7 @@
 <embed src="Zazie.mp3" loop="true" hidden="true" autostart="true">
 
 <div class="gameWindow">
-	<img style="left:53%; top: 20%; position: absolute;"src="C:/Users/School234/Documents/GitHub/angellicode.github.io/blocky_logo.png"/>
+	<img style="left:53%; top: 20%; position: absolute;"src="/blocky_logo.png"/>
 	<a href="about_blocky.html" class="button" style="position: absolute; right:20%; top:50%;">Start Game</a>
 	<a href="about_blocky.html" class="button" style="position: absolute; right:20%; top:60%;">About</a>
 </div>
