--- a/works.html
+++ b/works.html
@@ -45,10 +45,9 @@ function viewPeiceOne(){
 </script>
 
 <div class="menu">
-<a href="index.html" style="position: absolute; left: 25%;background-color: #4CAF50;">HOME</a>
-<a href="works.html" style="position: absolute; left: 50%;background-color: #4CAF50;">WORKS</a>
-<a href="about.html" style="position: absolute; right: 25%;background-color: #4CAF50;">ABOUT</a>
+<a href="index.html" style="position: absolute; margin:auto;background-color: #4CAF50;text-decoration:none;">HOME</a>
+<a href="works.html" style="position: absolute; left: 10%; background-color: #4CAF50;text-decoration: none;">WORKS</a>
+<a href="about.html" style="position: absolute; left: 20%;background-color: #4CAF50;text-decoration: none;">ABOUT</a>
 </div>
-
 </body>
 </html>
