--- a/works.html
+++ b/works.html
@@ -13,12 +13,12 @@
 
 <div class="portfolioOne" onClick="viewPeiceOne()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice One:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Small Web Game</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">CSS Styled Game Template</h3>
 </div>
 
 <div class="portfolioTwo" onClick="viewPeiceTwo()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice Two:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 14%; top: 15%;">Shopping Website</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 14%; top: 15%;">Photographer's Portfolio</h3>
 </div>
 
 <script>
@@ -36,18 +36,19 @@ window.typeWords();
 
 <script>
 function viewPeiceTwo(){
-	location.replace("C:/Users/School234/Documents/GitHub/angellicode.github.io/portfolio1/index.html");
+	location.replace("");
 }
 
 function viewPeiceOne(){
-	location.replace("/main_menu_blocky.html");
+	location.replace("");
 }
 </script>
 
 <div class="menu">
 <a href="index.html" style="position: absolute; margin:auto;background-color: #4CAF50;text-decoration:none;">HOME</a>
-<a href="works.html" style="position: absolute; left: 10%; background-color: #4CAF50;text-decoration: none;">WORKS</a>
-<a href="about.html" style="position: absolute; left: 20%;background-color: #4CAF50;text-decoration: none;">ABOUT</a>
+<a href="works.html" style="position: absolute; left: 7%; background-color: #4CAF50;text-decoration: none;">WORKS</a>
+<a href="about.html" style="position: absolute; left: 15.6%;background-color: #4CAF50;text-decoration: none;">ABOUT</a>
 </div>
+
 </body>
 </html>
