--- a/works.html
+++ b/works.html
@@ -36,7 +36,7 @@ window.typeWords();
 
 <script>
 function viewPeiceTwo(){
-	location.replace("");
+	location.replace("photographer.html");
 }
 
 function viewPeiceOne(){
