--- a/works.html
+++ b/works.html
@@ -13,12 +13,12 @@
 
 <div class="portfolioOne" onClick="viewPeiceOne()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice One:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">CSS Styled Game Template</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Photographer's Portfolio</h3>
 </div>
 
 <div class="portfolioTwo" onClick="viewPeiceTwo()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice Two:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 14%; top: 15%;">Photographer's Portfolio</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 14%; top: 15%;">Styled Game Template</h3>
 </div>
 
 <script>
@@ -36,11 +36,11 @@ window.typeWords();
 
 <script>
 function viewPeiceTwo(){
-	location.replace("photographer.html");
+	location.replace("");
 }
 
 function viewPeiceOne(){
-	location.replace("");
+	location.replace("photographer.html");
 }
 </script>
 
