--- a/photographer.html
+++ b/photographer.html
@@ -12,26 +12,21 @@
 
 <div class="about" id="about">
 <p style="position: absolute; top: 10%; left: 47%; color:white;">__________________________________________________</p>
-	<h3 style="position: absolute; left: 54%;top:5%;">Mia Smith</h3>
+	<h3 style="position: absolute; left: 52%;top:5%;">Mia Smith</h3>
 	<p style="position: absolute; left: 47%; top:20%; color:white;">__________________________________________________</p>
 	<h2 style="position: absolute; left: 52%; top:23%; color:white;">Photography is my passion</h2>
 	<p style="position: absolute; top: 30%; left: 47%; color:white; font-family: 'Noto Sans TC', sans-serif;">
-	Lorem ipsum dolor sit amet, consectetuer adipiscing<br> 
-elit. Aenean commodo ligula eget dolor. Aenean massa <br>
-strong. Cum sociis natoque penatibus <br>
-et magnis dis parturient montes, nascetur ridiculus<br> 
-	mus. Donec quam felis, ultricies nec, pellentesque <br>
-	eu, pretium quis, sem. Nulla consequat massa quis <br>
-	enim. Donec pede justo, fringilla vel, aliquet nec,<br> 
-	vulputate eget, arcu. In enim justo, rhoncus ut, <br>
-	imperdiet a, venenatis vitae, justo. Nullam dictum <br>
-	felis eu pede linkmollis pretium. Integer tincidunt. Cras dapibus. <br>
-	Vivamus elementum semper nisi. Aenean vulputate <br>
-	eleifend tellus. Aenean leo ligula, porttitor eu, <br>
-	consequat vitae, eleifend ac, enim. Aliquam lorem ante,<br> 
-	dapibus in, viverra quis, feugiat a, tellus. Phasellus <br>
-	viverra nulla ut metus varius laoreet. Quisque rutrum. <br>
-	Aenean imperdiet. Etiam ultricies nisi vel augue. <br></p>
+	What is photography? Capturing moments? Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a form of art and self expression.
+	What is photography? Capturing moments? Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a form of art and self expression.
+	What is photography? Capturing moments? Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a form of art and self expression.
+	What is photography? Capturing moments? Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a form of art and self expression.
+	What is photography? Capturing moments? Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a form of art and self expression.
+	This is template text.</p>
 
 </div>
 <br>
