--- a/photographer.html
+++ b/photographer.html
@@ -16,24 +16,22 @@
 	<p style="position: absolute; left: 47%; top:20%; color:white;">__________________________________________________</p>
 	<h2 style="position: absolute; left: 52%; top:23%; color:white;">Photography is my passion</h2>
 	<p style="text-align:center; top: 30%; color:white; font-family: 'Noto Sans TC', sans-serif;">
-	What is photography? Capturing moments? Capuring the very moment
-	something happens?To me, the photographer, I believe photography is a 
-	form of art and self expression.What is photography? Capturing moments? 
-	Capuring the very moment something happens?To me, the photographer, I 
-	believe photography is a form of art and self expression.What is photography? 
-	Capturing moments? Capuring the very momentsomething happens?To me, 
-	the photographer, I believe photography is a form of art and self 
-	expression.What is photography? Capturing moments? 
-	Capuring the very moment something happens?To me, the photographer, I 
-	believe photography is a form of art and self expression.
-	What is photography? Capturing moments? Capuring the very moment
-	something happens?To me, the photographer, I believe photography is a 
-	form of art and self expression.What is photography? Capturing moments? 
-	Capuring the very moment something happens?To me, the photographer, I 
-	believe photography is a form of art and self expression.What is photography? 
-	Capturing moments? Capuring the very momentsomething happens?To me, 
-	the photographer, I believe photography is a form of art and self 
-	expression.What is photography? Capturing moments? 
+	What is photography? Capturing moments? 
+	Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a 
+	form of art and self expression.<br>
+	What is photography? Capturing moments? 
+	Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a 
+	form of art and self expression.<br>
+	What is photography? Capturing moments? 
+	Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a 
+	form of art and self expression.<br>
+	What is photography? Capturing moments? 
+	Capuring the very moment something happens?
+	To me, the photographer, I believe photography is a 
+	form of art and self expression.<br>
 	</p>
 
 </div>
