--- a/photographer.html
+++ b/photographer.html
@@ -15,23 +15,23 @@
 	<h3 style="position: absolute; left: 52%;top:5%;">Mia Smith</h3>
 	<p style="position: absolute; left: 47%; top:20%; color:white;">__________________________________________________</p>
 	<h2 style="position: absolute; left: 52%; top:23%; color:white;">Photography is my passion</h2>
-	<p style="text-align:center; top: 30%; color:white; font-family: 'Noto Sans TC', sans-serif;">
+	<p style="top: 30%; position: absolute; left: 24%; color:white; font-family: 'Noto Sans TC', sans-serif;">
 	What is photography? Capturing moments? 
 	Capuring the very moment something happens?
-	To me, the photographer, I believe photography is a 
-	form of art and self expression.<br>
+	To me, the photographer, I believe photography 
+	is a form of art and self expression.<br>
 	What is photography? Capturing moments? 
 	Capuring the very moment something happens?
-	To me, the photographer, I believe photography is a 
-	form of art and self expression.<br>
+	To me, the photographer, I believe photography 
+	is a form of art and self expression.<br>
 	What is photography? Capturing moments? 
 	Capuring the very moment something happens?
-	To me, the photographer, I believe photography is a 
-	form of art and self expression.<br>
+	To me, the photographer, I believe photography 
+	is a form of art and self expression.<br>
 	What is photography? Capturing moments? 
 	Capuring the very moment something happens?
-	To me, the photographer, I believe photography is a 
-	form of art and self expression.<br>
+	To me, the photographer, I believe photography 
+	is a form of art and self expression.<br>
 	</p>
 
 </div>
