--- a/photographer.html
+++ b/photographer.html
@@ -16,21 +16,21 @@
 	<p style="position: absolute; left: 47%; top:20%; color:white;">__________________________________________________</p>
 	<h2 style="position: absolute; left: 52%; top:23%; color:white;">Photography is my passion</h2>
 	<p style="top: 30%; position: absolute; left: 35%; color:white; font-family: 'Noto Sans TC', sans-serif;">
-	What is photography? Capturing moments? 
-	Capuring the very moment something happens?
-	To me, the photographer, I believe photography 
+	What is photography? Capturing moments?<br>
+	Capuring the very moment something happens?<br>
+	To me, the photographer, I believe photography<br> 
 	is a form of art and self expression.<br>
-	What is photography? Capturing moments? 
-	Capuring the very moment something happens?
-	To me, the photographer, I believe photography 
+	What is photography? Capturing moments?<br>
+	Capuring the very moment something happens?<br>
+	To me, the photographer, I believe photography<br> 
 	is a form of art and self expression.<br>
-	What is photography? Capturing moments? 
-	Capuring the very moment something happens?
-	To me, the photographer, I believe photography 
+	What is photography? Capturing moments?<br>
+	Capuring the very moment something happens?<br>
+	To me, the photographer, I believe photography<br> 
 	is a form of art and self expression.<br>
-	What is photography? Capturing moments? 
-	Capuring the very moment something happens?
-	To me, the photographer, I believe photography 
+	What is photography? Capturing moments?<br>
+	Capuring the very moment something happens?<br>
+	To me, the photographer, I believe photography<br> 
 	is a form of art and self expression.<br>
 	</p>
 
