--- a/photographer.html
+++ b/photographer.html
@@ -16,7 +16,7 @@
 	<p style="position: absolute; left: 47%; top:20%; color:white;">__________________________________________________</p>
 	<h2 style="position: absolute; left: 52%; top:23%; color:white;">Photography is my passion</h2>
 	<p style="top: 30%; position: absolute; left: 40%; color:white; font-family: 'Noto Sans TC', sans-serif;">
-	<p>What is photography? Capturing moments?<br />
+	What is photography? Capturing moments?<br />
 	Capuring the very momentsomething happens?<br />
 	To me, the photographer, I believe photography is a 
 	<br />form of art and self expression.What is photography?
