--- a/about_blocky.html
+++ b/about_blocky.html
@@ -13,7 +13,7 @@
 </div>
 
 <script>
-var Words="Blocky needs your help! He is trying to cross the pathway towards his homeland. But, the notorious BadBlocks are preventing him from doing so. With your help, Blocky can defeat the BadBlocks and get to his homeland. Press the 'L' button on the keyboard to launch a rocket at any blue BadBlock, but don't get hit!"
+var Words="Blocky needs your help! He is trying to cross the pathway towards his homeland. But, the MeanBlocks are preventing him from doing so. With your help, Blocky can defeat the MeanBlocks and get to his homeland. Press the 'L' button on the keyboard to launch a rocket at any blue MeanBlocks, but don't get hit!"
 var i = 0;
 function typeWords(){
 if (i < Words.length ){
