--- a/photographer.html
+++ b/photographer.html
@@ -1,3 +1,5 @@
+<!--WEBSITE TEMPLATE-->
+<!--CODE  WRITTEN BY ANGELLICA B. 2019-->
 <html>
 <head>
 	<title>Mia Smith - Amazing photographs every time</title>
