--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--ANGELLICA'S WEBSITE-->
+<!--CODE  WRITTEN BY ANGELLICA B. 2019-->
 <html>
 <head>
 	<title>AngelliCode - Angellica Brown's Portfolio</title>
