--- a/game.html
+++ b/game.html
@@ -25,6 +25,11 @@
 	<div class ="jumpingBlock" id="jBlock" style=" top: 30%; left: 25%;">
 	</div>
 	
+	<div class="topBar">
+		<h3 style="font-family: Arial, sans-serif; color: white; float: right;">LIVES: 3</h3>
+		<h3 style="font-family: Arial, sans-serif; color: white; float: left;">POINTS: 0</h3>
+	</div>
+	
 	<!--ROCKET TO THROW AT MEAN BLOCK-->
 	<div class ="rocket" id="rocket">
 	</div>
