--- a/works.html
+++ b/works.html
@@ -15,12 +15,17 @@
 
 <div class="portfolioOne" onClick="viewPeiceOne()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice One:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Photographer's Portfolio</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 27%; top: 15%;">Portfolio</h3>
 </div>
 
 <div class="portfolioTwo" onClick="viewPeiceTwo()">
 	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice Two:<br></h2>
-	<h3 style="font-size: 20px; position: absolute; left: 14%; top: 15%;">Styled Game Template</h3>
+	<h3 style="font-size: 20px; position: absolute; left: 12%; top: 15%;">Styled Game TEMPLATE</h3>
+</div>
+
+<div class="portfolioThree" onClick="viewPeiceThree()">
+	<h2 style="font-size: 20px; position: absolute; left: 10%;">Portfolio Peice Three:<br></h2>
+	<h3 style="font-size: 20px; position: absolute; left: 16%; top: 15%;">Clothing Site(2016)</h3>
 </div>
 
 <script>
@@ -37,12 +42,16 @@ window.typeWords();
 </script>
 
 <script>
+function viewPeiceOne(){
+	location.replace("photographer.html");
+}
+
 function viewPeiceTwo(){
 	location.replace("main_menu_blocky.html");
 }
 
-function viewPeiceOne(){
-	location.replace("photographer.html");
+function viewPeiceThree(){
+	location.replace("view_shop_site.html");
 }
 </script>
 
