--- a/photographer.html
+++ b/photographer.html
@@ -2,7 +2,7 @@
 <!--CODE  WRITTEN BY ANGELLICA B. 2019-->
 <html>
 <head>
-	<title>Mia Smith - Amazing photographs every time</title>
+	<title>Your Name - Amazing photographs every time</title>
 	<link rel = "stylesheet" href="/photographer.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <div class="about" id="about">
 <p style="position: absolute; top: 10%; left: 47%; color:white;">__________________________________________________</p>
-	<h3 style="position: absolute; left: 52%;top:5%;">Mia Smith</h3>
+	<h3 style="position: absolute; left: 52%;top:5%;">Your Name</h3>
 	<p style="position: absolute; left: 47%; top:20%; color:white;">__________________________________________________</p>
 	<h2 style="position: absolute; left: 52%; top:23%; color:white;">Photography is my passion</h2>
 	<p style="top: 30%; position: absolute; left: 49%; color:white; font-family: 'Noto Sans TC', sans-serif;">
@@ -84,7 +84,7 @@
 	
 <div class="navBar">
 	<div class="sideBar">
-		<h3 style="left: 10%;top: 10%;">Mia Smith</h3>
+		<h3 style="left: 10%;top: 10%;">Your Name</h3>
 		<h2>Capturing Moments | Passion</h2>
 		<a href="#about" class="button" style="left: 17%; top: 40%; position: absolute;">ABOUT</a>
 		<a href="#works" class="button" style="left: 17%; top: 50%; position: absolute;">WORKS</a>
