--- a/about_blocky.html
+++ b/about_blocky.html
@@ -18,7 +18,7 @@
 
 <!--JAVASCRIPT CODE PART-->
 <script>
-var Words="Blocky needs your help! He is trying to defend his homeland. But, the MeanBlocks are preventing him from doing so. With your help, Blocky can defeat the MeanBlocks and get to his homeland. Press the 'L' button on the keyboard to launch a rocket at any blue MeanBlocks, but don't get hit!"
+var Words="Blocky needs your help! He is trying to defend his homeland. But, the MeanBots are preventing him from doing so. With your help, Blocky can defeat the MeanBots and protect his homeland. Press the 'L' button on the keyboard to launch a ball at any blue MeanBot, but don't get hit!"
 var i = 0;
 //A FUNCTION TO TYPE ALL THE WORDS
 function typeWords(){
