--- a/main_menu_blocky.html
+++ b/main_menu_blocky.html
@@ -11,6 +11,7 @@
 	<img style="left:53%; top: 20%; position: absolute;"src="/blocky_logo.png"/>
 	<a href="about_blocky.html" class="button" style="position: absolute; right:20%; top:50%;">Start Game</a>
 	<a href="about_blocky.html" class="button" style="position: absolute; right:20%; top:60%;">About</a>
+	<h3 style="left:60%; position: absolute; top:0;font-size:17px;">Note: Works best in Google Chrome</h3>
 </div>
 
 <h3 style="left:45%; position: absolute; top:85%;">© A. B. 2019</h3>
