--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
 		<!--<button class="button" style="position: absolute; top: 70%;">Jump</button>-->
 	</div>
 	
-	<img  id= "g_o" style="left:20%; top: 20%; position: absolute; visibility: hidden"src="C:/Users/School234/Documents/GitHub/angellicode.github.io/game_over.png"/>
+	<img  id= "g_o" style="left:20%; top: 20%; position: absolute; visibility: hidden"src="/game_over.png"/>
 </div>
 
 <!--JAVASCRIPT CODE PART-->
@@ -117,6 +117,7 @@ function meanBlockWalk (){
 		mblock.style.right = counter2;}
 		
 		if (counter2 == 489){
+			clearInterval(interval2);
 			meanBlockThrow();
 		}
 	}
