update (browser compatability)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!--ANGELLICA'S WEBSITE-->
 <!--CODE  WRITTEN BY ANGELLICA B. 2019-->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+"http://www.w3.org/TR/html4/strict.dtd"> 
 <html>
 <head>
 	<title>AngelliCode - Angellica Brown's Portfolio</title>
