--- a/main_menu_blocky.html
+++ b/main_menu_blocky.html
@@ -14,7 +14,7 @@
 	<h3 style="left:60%; position: absolute; top:0;font-size:17px;">Note: Works best in Google Chrome</h3>
 </div>
 
-<h3 style="left:45%; position: absolute; top:85%;">© A. B. 2019</h3>
+<!--<h3 style="left:45%; position: absolute; top:85%;">© A. B. 2019</h3>-->
 
 </body>
 </html>
